all works correct now ui fixs